--- a/Prueba/package.json
+++ b/Prueba/package.json
@@ -27,5 +27,5 @@
     "gh-pages": "^5.0.0",
     "vite": "^4.3.9"
   },
-  "homepage": "https://edenicola1.github.io/Prueba/"
+  "homepage": "https://edenicola1.github.io/Polar-2/"
 }
